# tugboat-sandbox

./: .tugboat.yaml  AGENTS.md  CONTRIBUTING.md  MERMAID.mmd  README.md  pyproject.toml  sandbox_ping.py
docs/fleet-workspace/: e2e-marker.md
docs/openapi-client/: auth.md  errors.md  overview.md
docs/queue/: runbook.md  troubleshooting.md
drafts/: 003-fix-readme-cli-examples.md  004-add-contributing-md.md  005-add-queue-runbook-docs.md  008-e2e-brief.md  intake-checklist.md  mission.md  plan-e2e-brief.md  plan-python-ping-brief.md  plan-stdlib-greet-brief.md
screenplay/: concept.md  script.md
screenplay/beats/: 01-opening-image.md  02-theme-stated.md  03-setup.md  04-catalyst.md  05-debate.md  06-break-into-act-ii.md  07-b-story.md  08-fun-and-games.md  09-midpoint.md  10-bad-guys-close-in.md  11-all-is-lost.md  12-dark-night-of-the-soul.md  13-break-into-act-iii.md  14-finale.md  15-final-image.md
scripts/: 008-e2e-bootstrap.sh  008-e2e-validate.sh  plan-queue-fixtures.sh
specs/001-expand-readme-with-mission-how-to-run-tu/: plan.md  spec.md  tasks.md
specs/002-docs-only-add-agents-md-mermaid-mmd-and/: plan.md  spec.md  tasks.md
specs/003-fix-readme-cli-examples/: plan.md  (+2 more)
tasks/: T001.md  T002.md  T003.md  T004.md  T005.md
tests/: __init__.py  test_assemble.py  test_calc.py  test_cli.py  test_clip_generator.py  test_clip_planner.py  test_email.py  test_greet.py  test_jsonlite.py  test_lists.py  test_models.py  test_money.py  test_paths.py  test_phone.py  test_ping.py  test_research.py  test_rle.py  test_screenplay.py  test_text.py  test_time.py
(+58 files in other folders)
