[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "history-video"
version = "0.1.0"
description = "Generate historical documentary videos from event titles"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "moviepy>=1.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]

[project.scripts]
history-video = "history_video.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["history_video*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]